--- a/src/main/resources/templates/users-login.html
+++ b/src/main/resources/templates/users-login.html
@@ -2,7 +2,7 @@
       xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/commons::head"></head>
 <body class="bg-dark">
-<header th:replace="fragments/commons::nav"></header>
+<!--<header th:replace="fragments/commons::nav"></header>-->
 
 <main class="p-5 align-content-center bg-dark my-register-div text-warning">
 
