--- a/src/main/resources/templates/users-register.html
+++ b/src/main/resources/templates/users-register.html
@@ -5,7 +5,7 @@
 </head>
 <body class="bg-dark">
 <main class="p-5 align-content-center bg-blur my-register-div">
-    <header th:replace="fragments/commons::nav"></header>
+<!--    <header th:replace="fragments/commons::nav"></header>-->
     <h4 class="border-bottom border-warning text-warning">РЕГИСТРИРАЙ СЕ ТУК!</h4>
     <div class="d-flex justify-content-center text-warning">
         <div class="row g-3">
