--- a/src/main/resources/templates/pipe-ID-exit.html
+++ b/src/main/resources/templates/pipe-ID-exit.html
@@ -5,7 +5,7 @@
 <head th:replace="fragments/commons::head"></head>
 
 <body class="bg-dark">
-<header th:replace="fragments/commons::nav"></header>
+<!--<header th:replace="fragments/commons::nav"></header>-->
 
 <main role="main" class="bg-dark">
 
