--- a/src/main/resources/templates/pipe-PE-input.html
+++ b/src/main/resources/templates/pipe-PE-input.html
@@ -4,7 +4,7 @@
 
 <head th:replace="fragments/commons::head"></head>
 <body class="bg-dark">
-<header th:replace="fragments/commons::nav"></header>
+<!--<header th:replace="fragments/commons::nav"></header>-->
 <main role="main " class="bg-dark">
 
 
