adding new functionalities

--- a/src/main/resources/templates/fragments/commons.html
+++ b/src/main/resources/templates/fragments/commons.html
@@ -98,7 +98,7 @@
 <!--                        <a class="bg-info text-white" href="/">Изтрий потребител</a>-->
 <!--                    </li>-->
                     <li>
-                        <a class="bg-info text-white" href="/">Браузинг история</a>
+                        <a class="bg-info text-white" th:href="@{/users/browser}">Браузинг история</a>
                     </li>
                     <li>
                         <a class="bg-info text-white" href="/">Отзиви</a>
