--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -50,7 +50,7 @@
                 <h4>Моите изчисления</h4>
             </div>
         </a>
-        <a href="/" class="main-btn bg-dark text-info" sec:authorize="!isAuthenticated()">
+        <a href="/about" class="main-btn bg-dark text-info" sec:authorize="!isAuthenticated()">
             <div class="box bg-dark text-info">
                 <img src="/images/hydricalclogo.jpg" height="150px" alt="">
                 <h4>Как работи Хидрокалкулатор?</h4>
