--- a/src/main/resources/templates/unsuccessful.html
+++ b/src/main/resources/templates/unsuccessful.html
@@ -15,13 +15,15 @@
         <div class="row align-content-center">
 
             <div class="container-fluid">
-                <h5 class="text-center text-danger mt-5">Успешна операция!</h5>
+                <h5 class="text-center text-danger mt-5">Неуспешен опит!
+                    Моля провери дали съществува такъв вътрешен диаметър за тези тръби и налягане!</h5>
             </div>
 
         </div>
     </div>
 
     <a th:replace="fragments/commons::toHomePage"></a>
+
 </main>
 <footer th:replace="fragments/commons::footer">
 </footer>
