--- a/src/main/resources/templates/users-register.html
+++ b/src/main/resources/templates/users-register.html
@@ -77,10 +77,10 @@
                         Двете пароли не съответстват! </strong>
                 </h4>
 
-                <h4 th:if="${occupiedUsername} == true" class="mt-5 text-center">
+                <h5 th:if="${occupiedUsername} == true" class="mt-1 text-center">
                     <strong class="bg-blur rounded text-danger">
-                        Опитай с друг юзърнейм! </strong>
-                </h4>
+                        Опитай с друго потребителско име! </strong>
+                </h5>
 
                 <div class="d-flex justify-content-center mt-4">
                     <button class="btn btn-primary btn-block w-75 text-warning" type="submit">РЕГИСТРИРАЙ СЕ!</button>
