--- a/src/main/resources/templates/pipe-PE-input.html
+++ b/src/main/resources/templates/pipe-PE-input.html
@@ -7,6 +7,8 @@
 <!--<header th:replace="fragments/commons::nav"></header>-->
 <main role="main " class="bg-dark">
 
+    <h5 class="border-bottom border-warning mb-5 text-warning">Изчисляване на PE тръби.</h5>
+
 
     <div class="container bg-dark rounded p-0 mt-0 w-75">
         <form
